Import of ADRIANWIT/Abstract-Meta-Class-0.03.tar.gz from CPAN.
gitpan-cpan-distribution: Abstract-Meta-Class
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ADRIANWIT/Abstract-Meta-Class-0.03.tar.gz
gitpan-cpan-author:       ADRIANWIT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.03  Mon May 05 2008
+	-  Fix pod documentation.
+
+
 0.02  Mon May 05 2008
 	-  Initial import to CPAN.
 
