--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.05  Sun May 25 2008
+	-  Fix Makefile.PL (Test::Pod, Test::Pod::Coverage)
+
 0.04  Sat May 24 2008
 	-  Fix pod documentation.
 	-  Storage key option fix
