Import of ADRIANWIT/Abstract-Meta-Class-0.10.tar.gz from CPAN.
gitpan-cpan-distribution: Abstract-Meta-Class
gitpan-cpan-version:      0.10
gitpan-cpan-path:         ADRIANWIT/Abstract-Meta-Class-0.10.tar.gz
gitpan-cpan-author:       ADRIANWIT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.10  Sun Jun 08 2008
+	-  fix deserialization bug
+
 0.09  Sun Jun 01 2008
 	-  fix test
 
