--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.11  Sun Sep 07 2007
+        - added array storage type
+        - fix required value for arra and hash perl type attribute
+
 0.10  Sun Jun 08 2008
 	-  fix deserialization bug
 
