Import of ADRIANWIT/Abstract-Meta-Class-0.12.tar.gz from CPAN.
gitpan-cpan-distribution: Abstract-Meta-Class
gitpan-cpan-version:      0.12
gitpan-cpan-path:         ADRIANWIT/Abstract-Meta-Class-0.12.tar.gz
gitpan-cpan-author:       ADRIANWIT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.12  Sun Oct 19 2008
+        - added custom constructor for array storage type
+
 0.11  Sun Sep 07 2007
         - added array storage type
         - fix required value for arra and hash perl type attribute
