Import of ADRIANWIT/Abstract-Meta-Class-0.13.tar.gz from CPAN.
gitpan-cpan-distribution: Abstract-Meta-Class
gitpan-cpan-version:      0.13
gitpan-cpan-path:         ADRIANWIT/Abstract-Meta-Class-0.13.tar.gz
gitpan-cpan-author:       ADRIANWIT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Abstract::Meta::Class.
 
+0.13 Sun Nov 23 2008
+	- added hash helper methods (exists, count, values, keys), improved documentation
+
 0.12  Sun Oct 19 2008
         - added custom constructor for array storage type
 
